--- a/WeatherChecker/WeatherChecker.csproj
+++ b/WeatherChecker/WeatherChecker.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0-windows</TargetFramework>
+    <TargetFramework>net8.0-windows7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
@@ -12,8 +12,8 @@
     <Authors>Erik Nagel</Authors>
     <Company>NetEti</Company>
     <PackageTags>NetEti Vishnu Plugin Weather Forecast Checker</PackageTags>
-    <AssemblyVersion>7.0.1.3</AssemblyVersion>
-    <FileVersion>7.0.1.3</FileVersion>
+    <AssemblyVersion>8.0.0.0</AssemblyVersion>
+    <FileVersion>8.0.0.0</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup>
