--- a/WeatherCheckerDemo/WeatherCheckerDemo.csproj
+++ b/WeatherCheckerDemo/WeatherCheckerDemo.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net7.0-windows</TargetFramework>
+    <TargetFramework>net8.0-windows7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <Copyright>Copyright © $(Authors) 2022-2023</Copyright>
@@ -10,8 +10,8 @@
     <Authors>Erik Nagel</Authors>
     <Company>NetEti</Company>
     <Description>$(AssemblyName) - Demoprogramm</Description>
-    <AssemblyVersion>7.0.1.3</AssemblyVersion>
-    <FileVersion>7.0.1.3</FileVersion>
+    <AssemblyVersion>8.0.0.0</AssemblyVersion>
+    <FileVersion>8.0.0.0</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup>
