--- a/WeatherCheckerDemo/WeatherCheckerDemo.csproj
+++ b/WeatherCheckerDemo/WeatherCheckerDemo.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>net8.0-windows7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Copyright>Copyright © $(Authors) 2022-2023</Copyright>
+    <Copyright>Copyright © $(Authors) 2022-$([System.DateTime]::Now.Year)</Copyright>
     <Title>$(AssemblyName) - Demoprogramm</Title>
     <Authors>Erik Nagel</Authors>
     <Company>NetEti</Company>
