Changed the geolocation provider in WeatherChecker from http://ip-api.com/ to https://www.geojs.io/ (https://github.com/InPlug/WeatherChecker/issues/1); Version to 8.0.1.0.

--- a/WeatherChecker/WeatherChecker.csproj
+++ b/WeatherChecker/WeatherChecker.csproj
@@ -36,6 +36,10 @@
     </Otherwise>
 	</Choose>
 
+	<ItemGroup>
+	  <Compile Remove="GeoLocation_ReturnObject_IP_API.cs" />
+	</ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
