--- a/WeatherChecker/WeatherChecker.csproj
+++ b/WeatherChecker/WeatherChecker.csproj
@@ -1,13 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0-windows7.0</TargetFramework>
+    <TargetFramework>net8.0-windows10.0.17763.0</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <PackageId>NetEti.$(AssemblyName)</PackageId>
-    <Title>$(AssemblyName) - Vishnu-Plugin: Ermittelt eine Wettervorhersage über http://www.7timer.info</Title>
-    <Description>$(AssemblyName) - Vishnu-Plugin: Ermittelt eine Wettervorhersage über http://www.7timer.info</Description>
+    <Title>$(AssemblyName) - Vishnu-Plugin: Ermittelt eine Wettervorhersage</Title>
+    <Description>$(AssemblyName) - Vishnu-Plugin: Ermittelt eine Wettervorhersage</Description>
     <Copyright>Copyright © $(Authors) 2022-$([System.DateTime]::Now.Year)</Copyright>
     <Authors>Erik Nagel</Authors>
     <Company>NetEti</Company>
@@ -18,6 +18,7 @@
 
   <PropertyGroup>
     <AssemblyRoot>$(ProjectDir)../../../ReadyBin/Assemblies</AssemblyRoot>
+    <SupportedOSPlatformVersion>10.0.17763.0</SupportedOSPlatformVersion>
   </PropertyGroup>
   <Import Project="$(ProjectDir)../../AddOn/proj/*" Condition="exists('$(ProjectDir)../../AddOn/proj')" />
 
