--- a/WeatherCheckerDemo/WeatherCheckerDemo.csproj
+++ b/WeatherCheckerDemo/WeatherCheckerDemo.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0-windows10.0.17763.0</TargetFramework>
+    <TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <Copyright>Copyright © $(Authors) 2022-$([System.DateTime]::Now.Year)</Copyright>
